Обновление гайда (9)